--- a/style.css
+++ b/style.css
@@ -76,3 +76,10 @@ body {
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
+.box{
+  width: 320px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+}
