--- a/style.css
+++ b/style.css
@@ -10,44 +10,27 @@ body {
   text-align: left;
 }
 
-#navbar {
-  overflow: hidden;
-  background-color: #c9e2f5;
-  color:black;
+.vertical-menu {
+  width: 200px;
+  height: 150px;
+  overflow-y: auto;
 }
 
-#navbar a {
-  float: left;
+.vertical-menu a {
+  background-color: #eee;
+  color: black;
   display: block;
-  color: black;
-  text-align: center;
-  padding: 20px 22px;
+  padding: 12px;
   text-decoration: none;
-  font-size: 17px;
 }
 
-#navbar a:hover {
-  background-color: #ddd;
-  color: black;
+.vertical-menu a:hover {
+  background-color: #ccc;
 }
 
-#navbar a.active {
+.vertical-menu a.active {
   background-color: #4CAF50;
   color: white;
-}
-
-.content {
-  padding: 20px;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 60px;
 }
 
 .box{
