--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   width: 200px;
   height: 150px;
   overflow-y: auto;
-  background-color:#bbd5fc;
+  background-color:#dbeaff;
 }
 
 .vertical-menu a {
