--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ body {
   box-shadow: 0 9px #999;
 }
 
-.button:hover {background-color: #dbeaff"}
+.button:hover {
+  background-color: #dbeaff"
+}
 
 .button:active {
   background-color: #3e8e41;
