--- a/style.css
+++ b/style.css
@@ -1,88 +1,113 @@
 body {
-  margin: 0;
-  font-size: 28px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
+    background-color: #49B749;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
-.header {
-  padding: 30px;
-  text-align: left;
+.todo-wrapper {
+    margin-top: 50px;
+    background-color: #fff;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+    font-weight: 300;
 }
 
-.vertical-menu {
-  width: 200px;
-  height: 150px;
-  overflow-y: auto;
-  background-color:#dbeaff;
+.todo-wrapper h2 {
+    margin: 0;
 }
 
-.vertical-menu a {
-  background-color:#bbd5fc ;
-  color: White;
-  display: block;
-  padding: 12px;
-  text-decoration: none;
+.todo-wrapper p {
+    font-style: italic;
+    color: #666;
+    margin: 5px 0;
 }
 
-.vertical-menu a:hover {
-  background-color: #bbd5fc;
+.todo-wrapper ol {
+    margin: 20px 0;
 }
 
-.vertical-menu a.active {
-  background-color:#bbd5fc ;
-  color: white;
+.todo-wrapper ol li {
+    margin: 5px 0;
+    padding: 3px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
 }
 
-.box{
-  border: 1px solid green ;
+.todo-wrapper ol li:nth-child(even) {
+    background: #ddd;
 }
 
-.button {
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: #4CAF50;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
+.todo-wrapper .completed {
+    text-decoration: line-through;
+    color: #666;
 }
 
-.button:hover {
-  background-color: #dbeaff"
+.todo-wrapper .pretty-button {
+    margin: 10px 2px;
+    padding: 5px 20px;
+    border-radius: 15px;
+    background-color: #0093D5;
+    border: none;
+    color: #fff;
+    text-align: center;
+    display: inline-block;
+    font-size: small;
 }
 
-.button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
+.todo-wrapper .pretty-button:hover {
+    cursor: pointer;
+    opacity: 0.75;
 }
 
-.box{
-  width: 320px;
-  padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
+.todo-wrapper input {
+    padding: 3px 6px;
 }
 
-.table{
-  font-size: 30px;
-  }
-
-  img.pic:hover {
-    height: 310px;
-    width: 310px;
-    filter: brightness(150%);
+.todo-wrapper form {
+    display: inline-block;
 }
 
+#control-wrapper {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 
+.todo-wrapper #clear-button {
+    background-color: #49B749;
+}
 
+.todo-wrapper #empty-button {
+    background-color: #9B1C20;
+}
 
+.todo-wrapper #save-button {
+    background-color: #49B749;
+}
 
+@media only screen and (min-width: 1400px) {
+    .todo-wrapper {
+        width: 50%;
+    }
 
+    .todo-wrapper input {
+        width: 600px;
+    }
 
+}
+
+@media only screen and (max-width: 1399px) and (min-width: 750px) {
+    .todo-wrapper {
+        width: 75%;
+    }
+
+    .todo-wrapper input {
+        width: 400px;
+    }
+}
